WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20331
REGRESSION(
r35177
-
r35203
): Scrolling slowly over a scrollable field scrolls the page instead of the field
https://bugs.webkit.org/show_bug.cgi?id=20331
Summary
REGRESSION(r35177-r35203): Scrolling slowly over a scrollable field scrolls t...
Gavin Sherlock
Reported
2008-08-08 08:42:11 PDT
Steps to reproduce: 1. Go to a page with a scrolling field, e.g. a text field, or a select list, such as:
http://en.wikipedia.org/w/index.php?title=Yao_Ming&action=edit
2. Put cursor over scrolling field 3. Scroll slowly, using a scroll wheel Expected results: Field under cursor will scroll Actual Results: Page scrolls Note, it you scroll faster, then the field scrolls, as it should. Regression: Yes, because it works as expected in Safari 3.1.2 (5525.20.1). Tested in
r35636
on 10.5.4 on a MacPro
Attachments
patch
(1.67 KB, patch)
2008-08-08 16:31 PDT
,
Maxime Britto
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Sherlock
Comment 1
2008-08-08 11:20:32 PDT
This works as expected in
r35177
, but not in
r35203
. I suspect
http://trac.webkit.org/changeset/35190
Mark Rowe (bdash)
Comment 2
2008-08-08 14:27:03 PDT
<
rdar://problem/6137022
>
Maxime Britto
Comment 3
2008-08-08 15:55:24 PDT
I'll take a look into this. The weird thing is, I can only repro it with a pc mouse wheel, with the mighty mouse I can't.
Maxime Britto
Comment 4
2008-08-08 16:31:22 PDT
Created
attachment 22714
[details]
patch
Maxime Britto
Comment 5
2008-08-08 16:41:35 PDT
fixed in
r35647
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug