2008-08-08  Maxime Britto  <britto@apple.com>

Reviewed by Adele.

        <rdar://problem/6137022>
        <https://bugs.webkit.org/show_bug.cgi?id=20331>
        REGRESSION(r35177-r35203): Scrolling slowly over a scrollable field scrolls the page instead of the field (20331)

        * page/EventHandler.cpp:
        (WebCore::scrollAndAcceptEvent): fixed the wrong cast for the wheel delta which was truncated to 0 on slow wheel scrolls.



Canonical link: https://commits.webkit.org/28056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35647 268f45cc-cd09-0410-ab3c-d52691b4dbfc