WebCore/page/EventHandler.cpp
@@ -99,13 +99,13 @@ static inline void scrollAndAcceptEvent(float delta, ScrollDirection positiveDir
     if (!delta)
         return;
 
-    int pixelsToScroll = abs(static_cast<int>(delta));
+    float pixelsToScroll = delta > 0 ? delta : -delta;
     if (!e.isContinuous() && !pageScrollEnabled) {
         if (node->renderer()->scroll(delta < 0 ? negativeDirection : positiveDirection, ScrollByLine, pixelsToScroll))
             e.accept();
     } else {
         if (pageScrollEnabled)
-            pixelsToScroll = static_cast<int>(windowHeightOrWidth); 
+            pixelsToScroll = windowHeightOrWidth; 
         if (node->renderer()->scroll(delta < 0 ? negativeDirection : positiveDirection, ScrollByPixel, pixelsToScroll))
             e.accept();
     }
